diesel_compile_tests/tests/ui/as_expression_bad_sql_type.stderr
error: `sql_type` must be in the form `sql_type = "value"`
 --> $DIR/as_expression_bad_sql_type.rs:4:10
  |
4 | #[derive(AsExpression)]
  |          ^^^^^^^^^^^^

error: Invalid Rust type
 --> $DIR/as_expression_bad_sql_type.rs:4:10
  |
4 | #[derive(AsExpression)]
  |          ^^^^^^^^^^^^

error: aborting due to 2 previous errors

